[package]
name = "psp"
version = "0.2.0"
rust-version = "1.80"
edition = "2021"
authors = ["matteoguadrini <matteo.guadrini@hotmail.it>"]
description = "PSP (Python Scaffolding Projects)"
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/MatteoGuadrini/psp"

[dependencies]
inquire = "0.7"
dotenv = "0.14"
