[package]
name = "psp"
version = "0.7.0"
rust-version = "1.85"
edition = "2021"
authors = ["matteoguadrini <matteo.guadrini@hotmail.it>"]
description = "PSP (Python Scaffolding Projects)"
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/MatteoGuadrini/psp"
documentation = "https://psp.readthedocs.io/"
categories = ["command-line-utilities", "python-tools"]
keywords = ["scaffold", "tool", "python", "package", "library"]

[dependencies]
inquire = "0.9"
dotenvy = "0.15"
handlebars = "6.4"
